force-app/main/default/objects/Product__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALEX</fullName>
            </value>
            <value>
                <fullName>AMY</fullName>
            </value>
            <value>
                <fullName>ANN</fullName>
            </value>
            <value>
                <fullName>ANNA</fullName>
            </value>
            <value>
                <fullName>Blueprint</fullName>
            </value>
            <value>
                <fullName>BMD</fullName>
            </value>
            <value>
                <fullName>Boxed</fullName>
            </value>
            <value>
                <fullName>CAM</fullName>
            </value>
            <value>
                <fullName>CB15x22</fullName>
            </value>
            <value>
                <fullName>CB16x36</fullName>
            </value>
            <value>
                <fullName>CB23x36</fullName>
            </value>
            <value>
                <fullName>ELIN</fullName>
            </value>
            <value>
                <fullName>ELLA</fullName>
            </value>
            <value>
                <fullName>EMMY</fullName>
            </value>
            <value>
                <fullName>EVA</fullName>
            </value>
            <value>
                <fullName>Eval Kit</fullName>
            </value>
            <value>
                <fullName>FW75</fullName>
            </value>
            <value>
                <fullName>IC</fullName>
            </value>
            <value>
                <fullName>JODY</fullName>
            </value>
            <value>
                <fullName>LARA</fullName>
            </value>
            <value>
                <fullName>LCC09096</fullName>
            </value>
            <value>
                <fullName>LCC1316</fullName>
            </value>
            <value>
                <fullName>LCC1618</fullName>
            </value>
            <value>
                <fullName>LCC2626</fullName>
            </value>
            <value>
                <fullName>LEA</fullName>
            </value>
            <value>
                <fullName>LEON</fullName>
            </value>
            <value>
                <fullName>LILY</fullName>
            </value>
            <value>
                <fullName>LISA</fullName>
            </value>
            <value>
                <fullName>LUCY</fullName>
            </value>
            <value>
                <fullName>LUKA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>