force-app/main/default/objects/Product__c/fields/Product_Grade__c.field-meta.xml
<CustomField>
    <fullName>Product_Grade__c</fullName>
    <description>Imported from Abacus</description>
    <inlineHelpText>(From Abacus)</inlineHelpText>
    <label>Product Grade</label>
    <length>32</length>
    <type>Text</type>
</CustomField>