force-app/main/default/objects/Product__c/fields/Product_Name_Short__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Short__c</fullName>
    <formula>case (Product_Center__c,
&quot;Cellular&quot;, left(Name , 7),
&quot;Positioning&quot;, left(Name , 6),
&quot;Short Range&quot;, left(Name , 7),
left(Name , 7)
)</formula>
    <inlineHelpText>Short version of product name, used to group products for statistical analysis</inlineHelpText>
    <label>Product Name Short</label>
    <type>Text</type>
</CustomField>