force-app/main/default/objects/Product__c/fields/Product_Series__c.field-meta.xml
<CustomField>
    <fullName>Product_Series__c</fullName>
    <description>Product Series to define Formfactor and Platform</description>
    <inlineHelpText>Product Series to define Formfactor and Platform</inlineHelpText>
    <label>Product Series</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Center__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALEX-N3</fullName>
            </value>
            <value>
                <fullName>ALEX-R5</fullName>
            </value>
            <value>
                <fullName>ANNA-B1</fullName>
            </value>
            <value>
                <fullName>ELLA-W1</fullName>
            </value>
            <value>
                <fullName>EMMY-W1</fullName>
            </value>
            <value>
                <fullName>EMMY-W2</fullName>
            </value>
            <value>
                <fullName>JODY-B3</fullName>
            </value>
            <value>
                <fullName>JODY-W1</fullName>
            </value>
            <value>
                <fullName>JODY-W2</fullName>
            </value>
            <value>
                <fullName>JODY-W3</fullName>
            </value>
            <value>
                <fullName>LARA-R2</fullName>
            </value>
            <value>
                <fullName>LARA-R3</fullName>
            </value>
            <value>
                <fullName>LARA-R4</fullName>
            </value>
            <value>
                <fullName>LEON-G1</fullName>
            </value>
            <value>
                <fullName>LILY-W1</fullName>
            </value>
            <value>
                <fullName>LISA-C2</fullName>
            </value>
            <value>
                <fullName>LISA-N1</fullName>
            </value>
            <value>
                <fullName>LISA-U2</fullName>
            </value>
            <value>
                <fullName>NANO-S1</fullName>
            </value>
            <value>
                <fullName>NINA-B1</fullName>
            </value>
            <value>
                <fullName>NINA-B2</fullName>
            </value>
            <value>
                <fullName>NINA-B3</fullName>
            </value>
            <value>
                <fullName>NINA-W1</fullName>
            </value>
            <value>
                <fullName>MPCI-L1</fullName>
            </value>
            <value>
                <fullName>MPCI-L2</fullName>
            </value>
            <value>
                <fullName>MPCI-L4</fullName>
            </value>
            <value>
                <fullName>N7-MAT</fullName>
            </value>
            <value>
                <fullName>OBS</fullName>
            </value>
            <value>
                <fullName>ODIN-W1</fullName>
            </value>
            <value>
                <fullName>ODIN-W2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>