force-app/main/default/objects/Product__c/fields/Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Status__c</fullName>
    <label>Product Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Considered</fullName>
            </value>
            <value>
                <fullName>In Definition</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>Prototypes</fullName>
            </value>
            <value>
                <fullName>Engineering Samples</fullName>
            </value>
            <value>
                <fullName>Production Ready</fullName>
            </value>
            <value>
                <fullName>Initial Production</fullName>
            </value>
            <value>
                <fullName>Mass Production</fullName>
            </value>
            <value>
                <fullName>End of Life</fullName>
            </value>
            <value>
                <fullName>Obsolete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>