force-app/main/default/objects/Product__c/fields/Product_Text_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Text_2__c</fullName>
    <description>Second line of Abacus product description</description>
    <inlineHelpText>(From Abacus) Second line of Abacus product description</inlineHelpText>
    <label>Product Text 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>