force-app/main/default/objects/Product__c/fields/Product_Text_Long2__c.field-meta.xml
<CustomField>
    <fullName>Product_Text_Long2__c</fullName>
    <description>Create long text out of Text 1, Text 2, and Text 3</description>
    <formula>Product_Text_1__c &amp;&quot; &quot;&amp; Product_Text_2__c &amp;&quot; &quot;&amp; Product_Text_3__c</formula>
    <inlineHelpText>Combination of Text 1, Text 2, and Text 3. Replaced by Product Description (no longer used for quotations).</inlineHelpText>
    <label>Product Text Long</label>
    <type>Text</type>
</CustomField>