force-app/main/default/objects/Product__c/fields/PS_Availability_Date__c.field-meta.xml
<CustomField>
    <fullName>PS_Availability_Date__c</fullName>
    <description>Date when 1st product summary becomes available</description>
    <inlineHelpText>Date when 1st product summary becomes available</inlineHelpText>
    <label>PS Availability Date</label>
    <type>Date</type>
</CustomField>