force-app/main/default/objects/Product__c/fields/Qualification_Report_Availability_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Report_Availability_Date__c</fullName>
    <inlineHelpText>Date when the Qualification Report becomes available (no later than MP Availability Date)</inlineHelpText>
    <label>Qualification Report Availability Date</label>
    <type>Date</type>
</CustomField>