force-app/main/default/objects/Product__c/fields/Referred_Product__c.field-meta.xml
<CustomField>
    <fullName>Referred_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Product)</relationshipLabel>
    <relationshipName>Products3</relationshipName>
    <type>Lookup</type>
</CustomField>