force-app/main/default/objects/Product__c/fields/Reporting_Category__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Category__c</fullName>
    <inlineHelpText>Category used for sales reporting</inlineHelpText>
    <label>Reporting Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>u-blox A9</fullName>
            </value>
            <value>
                <fullName>u-blox D9</fullName>
            </value>
            <value>
                <fullName>u-blox F9</fullName>
            </value>
            <value>
                <fullName>u-blox M9</fullName>
            </value>
            <value>
                <fullName>u-blox M8</fullName>
            </value>
            <value>
                <fullName>u-blox 8</fullName>
            </value>
            <value>
                <fullName>u-blox 7</fullName>
            </value>
            <value>
                <fullName>u-blox 6</fullName>
            </value>
            <value>
                <fullName>u-blox 5</fullName>
            </value>
            <value>
                <fullName>Antaris 4</fullName>
            </value>
            <value>
                <fullName>GNSS various</fullName>
            </value>
            <value>
                <fullName>GNSS solutions</fullName>
            </value>
            <value>
                <fullName>GNSS non-UBX</fullName>
            </value>
            <value>
                <fullName>GPRS modules</fullName>
            </value>
            <value>
                <fullName>HSPA modules</fullName>
            </value>
            <value>
                <fullName>CDMA modules</fullName>
            </value>
            <value>
                <fullName>LTE modules</fullName>
            </value>
            <value>
                <fullName>LTE chips</fullName>
            </value>
            <value>
                <fullName>RPMA modules</fullName>
            </value>
            <value>
                <fullName>CIoT modules</fullName>
            </value>
            <value>
                <fullName>Wireless solutions</fullName>
            </value>
            <value>
                <fullName>Bluetooth</fullName>
            </value>
            <value>
                <fullName>Multiradio</fullName>
            </value>
            <value>
                <fullName>Wi-Fi</fullName>
            </value>
            <value>
                <fullName>SHO services</fullName>
            </value>
            <value>
                <fullName>V2X</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>