force-app/main/default/objects/Product__c/fields/RoT__c.field-meta.xml
<CustomField>
    <fullName>RoT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is maintained in Abacus</description>
    <inlineHelpText>(From Abacus) Checked if the product contains a secure Root Of Trust</inlineHelpText>
    <label>RoT</label>
    <type>Checkbox</type>
</CustomField>