force-app/main/default/objects/Product__c/fields/Search_String__c.field-meta.xml
<CustomField>
    <fullName>Search_String__c</fullName>
    <description>Orig:
case( Product_Category__c,
&quot;POS chips&quot;, LEFT ( ProductCode,14),
&quot;CEL modules&quot;, LEFT ( ProductCode,9),
&quot;SHO modules&quot;, Name ,
&quot;SHO services&quot;, Name ,
ProductCode)</description>
    <formula>Name</formula>
    <inlineHelpText>Search string used for &quot;Show Orders&quot; and &quot;Show Opportunities&quot;. Depends on product category.</inlineHelpText>
    <label>Search String</label>
    <type>Text</type>
</CustomField>