force-app/main/default/objects/Product__c/fields/Sub_Technology__c.field-meta.xml
<CustomField>
    <fullName>Sub_Technology__c</fullName>
    <label>Sub Technology</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Technology__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single GNSS</fullName>
            </value>
            <value>
                <fullName>Multi GNSS</fullName>
            </value>
            <value>
                <fullName>ADR</fullName>
            </value>
            <value>
                <fullName>UDR</fullName>
            </value>
            <value>
                <fullName>Time sync</fullName>
            </value>
            <value>
                <fullName>Time &amp; frequency sync</fullName>
            </value>
            <value>
                <fullName>Single band (L1)</fullName>
            </value>
            <value>
                <fullName>Dual band</fullName>
            </value>
            <value>
                <fullName>Triple band</fullName>
            </value>
            <value>
                <fullName>Companion product</fullName>
            </value>
            <value>
                <fullName>High LTE category</fullName>
            </value>
            <value>
                <fullName>Low LTE category</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>