force-app/main/default/objects/Product__c/fields/Successor_Product_Type_No__c.field-meta.xml
<CustomField>
    <fullName>Successor_Product_Type_No__c</fullName>
    <formula>Successor_Product__r.Type_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Successor Product Type No</label>
    <type>Text</type>
</CustomField>