force-app/main/default/objects/Product__c/fields/Supplier_A__c.field-meta.xml
<CustomField>
    <fullName>Supplier_A__c</fullName>
    <description>Main current supplier</description>
    <inlineHelpText>(From Abacus) Main current supplier</inlineHelpText>
    <label>Supplier A</label>
    <length>100</length>
    <type>Text</type>
</CustomField>