force-app/main/default/objects/Product__c/fields/Supplier_B__c.field-meta.xml
<CustomField>
    <fullName>Supplier_B__c</fullName>
    <description>Second or previous supplier</description>
    <inlineHelpText>(From Abacus) Second or previous supplier</inlineHelpText>
    <label>Supplier B</label>
    <length>100</length>
    <type>Text</type>
</CustomField>