force-app/main/default/objects/Product__c/fields/Supplier_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Number__c</fullName>
    <inlineHelpText>(From Abacus) Ordering code for our suppliers. Only visible to logistics and marketing.</inlineHelpText>
    <label>Supplier Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>