force-app/main/default/objects/Product__c/fields/Supported_Services__c.field-meta.xml
<CustomField>
    <fullName>Supported_Services__c</fullName>
    <description>Added for Product Services Support Portal https://wiki.u-blox.com/bin/view/Generic/SvcCSPUIRequirements</description>
    <inlineHelpText>The list of Services Supported by this product</inlineHelpText>
    <label>Supported Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEL-SEC-LENC</fullName>
            </value>
            <value>
                <fullName>CEL-SEC-E2EE</fullName>
            </value>
            <value>
                <fullName>CEL-SEC-PSKP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>