force-app/main/default/objects/Product__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Center__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Standard Precision GNSS</fullName>
            </value>
            <value>
                <fullName>High Precision GNSS</fullName>
            </value>
            <value>
                <fullName>Dead Reckoning</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>LTE</fullName>
            </value>
            <value>
                <fullName>UMTS</fullName>
            </value>
            <value>
                <fullName>CDMA</fullName>
            </value>
            <value>
                <fullName>GSM/GPRS</fullName>
            </value>
            <value>
                <fullName>NB-IoT</fullName>
            </value>
            <value>
                <fullName>RPMA</fullName>
            </value>
            <value>
                <fullName>Multiradio</fullName>
            </value>
            <value>
                <fullName>Wi-Fi</fullName>
            </value>
            <value>
                <fullName>Bluetooth</fullName>
            </value>
            <value>
                <fullName>V2X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>