force-app/main/default/objects/Product__c/fields/Temp__c.field-meta.xml
<CustomField>
    <fullName>Temp__c</fullName>
    <formula>ProductCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temp</label>
    <type>Text</type>
</CustomField>