force-app/main/default/objects/Product__c/fields/Time_Based_WF_Flag__c.field-meta.xml
<CustomField>
    <fullName>Time_Based_WF_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used only to &quot;touch&quot; record to put it in the time-based WF queue.</description>
    <inlineHelpText>Used only to &quot;touch&quot; record to put it in the time-based WF queue.</inlineHelpText>
    <label>Time-Based WF Flag</label>
    <type>Checkbox</type>
</CustomField>