force-app/main/default/objects/Product__c/fields/Use_Abacus_Cost__c.field-meta.xml
<CustomField>
    <fullName>Use_Abacus_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, use the cost from Abacus to calculate the contribution.</inlineHelpText>
    <label>Use Abacus Cost</label>
    <type>Checkbox</type>
</CustomField>