force-app/main/default/objects/Product__c/fields/Valid_For_1__c.field-meta.xml
<CustomField>
    <fullName>Valid_For_1__c</fullName>
    <inlineHelpText>Valid For 1</inlineHelpText>
    <label>Valid For 1</label>
    <length>15</length>
    <type>Text</type>
</CustomField>