force-app/main/default/objects/Product__c/fields/Valid_For_2__c.field-meta.xml
<CustomField>
    <fullName>Valid_For_2__c</fullName>
    <inlineHelpText>Period when COGS 2 is valid</inlineHelpText>
    <label>Valid For 2</label>
    <length>15</length>
    <type>Text</type>
</CustomField>