force-app/main/default/objects/Product__c/fields/Visible_In_Masterschedule__c.field-meta.xml
<CustomField>
    <fullName>Visible_In_Masterschedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the product needs to be visible in Masterschedule dashboard and report</description>
    <inlineHelpText>Check if the product needs to be visible in Masterschedule dashboard and report</inlineHelpText>
    <label>Visible In Masterschedule</label>
    <type>Checkbox</type>
</CustomField>