force-app/main/default/objects/Product__c/fields/X5_year_category__c.field-meta.xml
<CustomField>
    <fullName>X5_year_category__c</fullName>
    <defaultValue>&quot;Other&quot;</defaultValue>
    <description>5 year category for business plans only, please don&apos;t change values</description>
    <inlineHelpText>Values will be set automatically, don&apos;t change the entries</inlineHelpText>
    <label>5 year category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>